Use smaller metadatabox width on small screens, fix more overlapping.

--- a/src/sass/forms.scss
+++ b/src/sass/forms.scss
@@ -75,7 +75,10 @@ form > table {
 			width: 100%;
 			line-height: $field-height;
 			height: $field-height;
-			min-width: 30em;
+
+			@include layout-type(normal) { min-width: 30em; }
+			@include layout-type(small) { min-width: 20em; }
+			@include layout-type(extrasmall) { min-width: 10em; }
 		}
 
 		input[type='submit'] {
@@ -84,7 +87,9 @@ form > table {
 		}
 
 		textarea {
-			height: 15em;
+			@include layout-type(normal) { height: 10em; }
+			@include layout-type(small) { height: 7em; }
+			@include layout-type(extrasmall) { height: 5em; }
 		}
 
 		select {
